<resources>
    <string name="app_name">FollowHelper</string>
    <string name="title_home">HOME</string>
    <string name="title_praise">LIKE</string>
    <string name="total_user_num">TOTAL USERS</string>
    <string name="total_followed_num">TOTAL ATTENTION</string>
    <string name="function_title">What can this software help you do?</string>
    <string name="function_des1">1.Bind your account and you can have a large number of users to follow you.。</string>
    <string name="function_des2">2.Add your video link so that everyone can like each other and become popular.</string>
    <string name="follow_bind_text">Your %s number has not been bound yet</string>
    <string name="follow_bind_text2">Your %s number is: %s</string>
    <string name="follow_follow_text">Let’s fan each other together</string>
    <string name="guide_top_text">This software provides the following two methods to complete the required functions. Please operate according to the following methods.</string>
    <string name="method_one">Method 1: Click here to download the complete App and perform automated operations. The effect is shown in the video below.</string>
    <string name="method_two">Method 2: Click "Copy", open Douyin/Tiktop, and search for the copied content.</string>
    <string name="copy">Copy</string>
    <string name="privacy_policy_content">Welcome to TFollow! &lt;br&gt;
        We strive to provide users with an excellent experience in all aspects of our products. We will update from time to time
        &lt;a href=%s&gt;"Privacy Policy"&lt;/a&gt;.&lt;br&gt;If you agree, please click "Agree" and start using TFollow.</string>
    <string name="agree">agree</string>
    <string name="not_used">Not use yet</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="follow_app1">Douyin</string>
    <string name="follow_app2">Tiktop</string>


    <string name="title_dashboard">LINK</string>
    <string name="title_notifications">MINE</string>
    <string name="need_permiss">You need to enable the following permissions to follow fans</string>
    <string name="accessibility_permiss">Accessibility</string>
    <string name="drawOverlays_permiss">Floating</string>
    <string name="to_follow">Following</string>
    <string name="follow_notice_text">Every time you follow a user on Hufan, you have a chance to be followed.</string>
    <string name="to_bind">Binding</string>
    <string name="to_change">Modify</string>
    <string name="follow_bind_account">The currently bound Douyin account is: %s</string>
    <string name="login_title">Login</string>
    <string name="suggestion_title">Say whatever you have to say</string>
    <string name="login_register_title">Register</string>
    <string name="change_psw_title">Noble people often forget things</string>
    <string name="can_follow_title">Instructions for attention</string>
    <string name="can_follow_text">The current number of people you can follow is %s. Please open Douyin/TikTok first and click search, and then exit Douyin/TikTok to the background.</string>
    <string name="praise_notice">1. When you like each other, you will take a screenshot to get the like icon and determine whether it has been liked. 2. It is best not to add more than three video links. If a fan likes it three times in a row, the video will be limited. 3. Press the volume up key to exit script execution.</string>
    <string name="to_comment">Comment</string>
    <string name="to_praise">Praise</string>
    <string name="add_video_url">Add a link</string>
    <string name="share_video_url">Share video</string>
    <string name="input_title">Enter title</string>
    <string name="input_praise_video_url">Open video->copy link->paste here</string>
    <string name="please_enter_title">Please enter a title</string>
    <string name="please_enter_url">Please enter text with https</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="check">Check</string>
    <string name="delete_notice">Once deleted, it cannot be recovered. Are you sure you want to delete it?</string>
    <string name="delete_fail">Failed to delete</string>
    <string name="not_any_follow">There is currently no one to follow. You can invite more friends to join.</string>
    <string name="not_any_praise">There are currently no likes. You can invite more friends to join.</string>
    <string name="can_praise_title">Instructions for liking</string>
    <string name="can_praise_text">The current number of videos that can be liked by each other is %s</string>
    <string name="curr_praise_num">Number of likes:</string>
    <!--我的页面-->
    <string name="login">Login</string>
    <string name="retrieve_password">Retrieve psw</string>
    <string name="remaining_follow">Remaining follow</string>
    <string name="cumulative_follow">Cumulative follow</string>
    <string name="cumulative_followed">Cumulative followed</string>
    <string name="modify_username">Modify Username</string>
    <string name="modify_email">Modify Email</string>
    <string name="modify_psw">Modify Psw</string>
    <string name="logout">logout</string>
    <string name="modify_bind_account">modify bind account</string>
    <string name="add_bind_account">add bind account</string>
    <string name="add">add</string>
    <string name="copy_account">Open Douyin/TikTok->My->Click on Douyin/TikTok account to copy</string>
    <string name="modify">modify</string>
    <string name="enter_confirmation_code">enter confirmation code</string>
    <string name="send_confirmation_code">send  code</string>
    <string name="enter_username">enter username</string>
    <string name="enter_email">enter email</string>
    <string name="enter_psw">enter password</string>
    <string name="enter_username_or_email">Enter username or email number</string>
    <string name="register">Register</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="stay_tuned">Stay tuned</string>
    <string name="login_again">Login failed, please log in again</string>
    <string name="username_not_empty">Username can not be empty</string>
    <string name="password_not_empty">Password can not be blank</string>
    <string name="email_not_empty">E-mail can not be empty</string>
    <string name="login_success">Login successful</string>
    <string name="register_success">Registration success</string>
    <string name="modify_success">Successfully modified</string>
    <string name="send_code_success">Verification code sent successfully</string>
    <string name="copy_dev_account">The developer\’s Douyin/TikTok account has been copied to the clipboard</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="input_not_empty">Input can not be empty</string>
    <string name="thinks_feedback">Thanks for the feedback</string>
    <string name="total_likes">Total likes</string>
    <string name="the_rest_were_liked">Need liked</string>
    <string name="accumulated_likes">My likes</string>
    <string name="total_liked">Total liked</string>
    <string name="click_add_url">Click \"%s\" button to add your video link, and then others can like it for you.</string>
    <string name="switch_app">Switch apps:</string>
    <string name="tip_1">1:Switch app</string>
    <string name="tip_2">2:Bind account</string>
    <string name="tip_3">3:Enable permissions</string>
    <string name="tip_4">4:Get fans</string>
    <string name="Feedback">Feedback</string>
    <string name="setting_privacypolicy_title">Privacy policy</string>


</resources>