<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_praise_input"
    android:padding="@dimen/dp15">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_praise_input_border"
        android:gravity="start"
        android:hint="@string/input_title"
        android:maxLength="30"
        android:padding="5dp"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_url"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/bg_praise_input_border"
        android:gravity="start"
        android:hint="@string/input_praise_video_url"
        android:maxLength="255"
        android:padding="5dp"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ok"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/bg_home_follow_btn"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_url" />


</androidx.constraintlayout.widget.ConstraintLayout>