<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="guideViewModel"
            type="com.lyflovelyy.followhelper.viewmodel.GuideViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.GuideActivity">

        <include layout="@layout/head_common_title" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/dp10"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/dp50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_top_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="@dimen/dp30"
                    android:text="@string/guide_top_text"
                    android:textColor="@color/c_333" />

                <TextView
                    android:id="@+id/method_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    android:text="@string/method_one"
                    android:textColor="@color/black" />

                <WebView
                    android:id="@+id/webview"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_margin="@dimen/dp20" />

                <TextView
                    android:id="@+id/method_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    android:text="@string/method_two"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp20" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
