<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="praiseVideoModel"
            type="com.mind.data.data.model.praise.PraiseVideoModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp5"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp5"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:text="@{praiseVideoModel.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp14"
                tools:text="这是一个主标题" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:text="@{praiseVideoModel.url}"
                android:textColor="@color/color_999"
                android:textSize="@dimen/sp12"
                tools:text="这是一个副标题" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/dp10"
                android:background="@color/gray_40" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_num_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/curr_praise_num"
                    android:textColor="@color/gray"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_delete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_delete" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp5"
                    android:text="@{String.valueOf(praiseVideoModel.count)}"
                    android:textColor="@color/red"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_delete"
                    app:layout_constraintStart_toEndOf="@+id/tv_num_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_delete" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_praise_funtion_btn"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="3dp"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp10"
                    android:background="@drawable/bg_praise_funtion_btn"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="3dp"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_delete"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp10"
                    android:background="@drawable/bg_praise_funtion_btn"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="3dp"
                    android:text="@string/check"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_edit"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>